# humanoid_hardware

./: .mxproject  CMakeLists.txt  alientek_stm32f407.ioc  build-debug.bat  build.bat
.github/workflows/: master.yaml  master.yml
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: dma.c  freertos.c  fsmc.c  gpio.c  i2c.c  main.c  sdio.c  spi.c  stm32f4xx_it.c  usart.c
MDK-ARM/: alientek_stm32f407.uvguix.heyu  alientek_stm32f407.uvoptx  alientek_stm32f407.uvprojx  humanoid.uvprojx
MDK-ARM/RTE/_alientek_stm32f407/: RTE_Components.h
USB_DEVICE/App/: usbd_cdc_if.c
application/: app_manage.c  app_manage.h  communicate_task.c  communicate_task.h  communication_task.c  communication_task.h  event.h  hand_task.c  head_control_task.c  head_control_task.h  init.c  init.h  init_task.c  key_task.c  leg_control_task.c  leg_control_task.h  offline_service.c  offline_service.h  sensor_task.c  shell.c  shell_task.c  shell_task.h  test.c  test.h
bsp/: bsp_adc.c  bsp_adc.h  bsp_key.c  bsp_key.h  bsp_rng.h  bsp_usart.c  bsp_usb.c  bsp_usb.h
bsp/boards/: ahrs.h  board.c  drv_can.c  drv_can.h  drv_io.c  drv_io.h  drv_uart.h  stm32f4xx_it.c  usbd_cdc.c  usbd_cdc_if.c
bsp/cubemx/: .mxproject  tpye_c.ioc
bsp/cubemx/Core/Inc/: main.h  stm32f4xx_hal_conf.h  tim.h
bsp/cubemx/Core/Src/: freertos.c  gpio.c  iwdg.c  main.c  stm32f4xx_it.c  tim.c
bsp/cubemx/MDK-ARM/: tpye_c.uvprojx
bsp/cubemx/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
bsp/cubemx/USB_DEVICE/App/: usb_device.c  usbd_desc.c
components/algorithm/: my_math.h  pid.c
components/cli/: File-Related-CLI-commands.c  Sample-CLI-commands.c  cli_process.c  shell_commands.c
components/devices/: device.c  device.h  gyro.c  gyro.h  maestro.c  maestro.h
components/devices/motor/: motor.c  motor.h  motor_base.c  motor_base.h  motor_dm.c  motor_dm.h  motor_tmotor.c  motor_tmotor.h  motor_zeroerr.c  motor_zeroerr.h
components/drivers/: ee24Config.h  linear_actuator.c  linear_actuator.h  maestro.c  maestro.h  w25qxx.c
components/event_mgr/: event_mgr.h
components/log/: log.c  log.h
components/protocol/: protocol.h  protocol_def.h  protocol_definition.c  protocol_definition.h  protocol_lite.c  protocol_lite.h
components/soft_timer/: os_timer.c  os_timer.h  period.c  soft_timer.c
components/support/: memory_management.c  memory_management.h  sys.c  sys.h
doc/: timer calculator.xlsx
doc/双路驱动器WSDC2412D/: 3D Motor_Driver_22.step
